# Video_str_dividider

./: .gitignore  .replit  MANIFEST.in  README.md  __init__.py  ad_config.py  ads.py  app.py  cli.py  pyproject.toml  setup.py  subtitle_processor.py  utils.py  video_processor.py
.streamlit/: config.toml
