[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20240930",
    "openai>=1.78.0",
    "srt>=3.5.3",
    "streamlit>=1.45.0",
    "whisper>=1.1.10",
    "pytube>=15.0.0",
    "trafilatura>=2.0.0",
    "yt-dlp>=2025.4.30",
]
